styles/index.scss
/* ... */
.day-night-toggle.react-toggle {
    &.react-toggle--checked:hover {
        &:not(.react-toggle--disabled) .react-toggle-track {
            background-color: #443C36;
        }
    }

    .react-toggle-track {
        background-color: #443C36;

        &:hover {
            background-color: #443C36;
        }

        &-x,
        &-check {
            right: 8px;
            width: 15px;
            height: 15px;

            svg {
                width: 100%;
                height: 100%;
            }
        }
    }
}

.page-footer {
    // padding: 40px;
    font-size: 20px;
    text-align: center;

    a {
        color: #63696e;
    }
}

// ### Styles for theme toggle

.dark {
    .card.fj-card {
        background-color: #232129;
        transition: color 0s ease-out 0s, background 0.2s ease-out 0s;

        .card-body-wrapper {
            background-color: #232129;
            transition: color 0s ease-out 0s, background 0.2s ease-out 0s;
        }

        .card-button {
            background-color: #9b5f5f;
        }
    }

    .fj-navbar.fj-nav-base {
        width: 100%;
        padding: 20px 0px;

        .fj-navbar {
            &-brand {
                color: #ffffff;
            }

            &-link {
                color: #ffffff;
            }
        }
    }
        .mobile-nav-close {
            background-color: #443C36 !important;
            color: #fff;
            outline: #443C36;
            border: 4px #443C36;
            margin-top: 4px;

            &:hover {
                background-color: #443C36;
                color: #fff;
            }
        }
        .day-night-toggle.react-toggle {
            &.react-toggle--checked:hover {
                &:not(.react-toggle--disabled) .react-toggle-track {
                    background-color: #000;
                }
            }
    
            .react-toggle-track {
                background-color: #000;
    
                &:hover {
                    background-color: #000;
                }
    
                &-x,
                &-check {
                    right: 8px;
                    width: 15px;
                    height: 15px;
    
                    svg {
                        width: 100%;
                        height: 100%;
                    }
                }
            }
        }
}

// .day-night-toggle.react-toggle {
//     &.react-toggle--checked:hover {
//         &:not(.react-toggle--disabled) .react-toggle-track {
//             background-color: #443C36;
//         }
//     }

//     .react-toggle-track {
//         background-color: #443C36;

//         &:hover {
//             background-color: #443C36;
//         }

//         &-x,
//         &-check {
//             right: 8px;
//             width: 15px;
//             height: 15px;

//             svg {
//                 width: 100%;
//                 height: 100%;
//             }
//         }
//     }
// }


// #navbar {

//     //   top: -100px;
//     //   transition: top 0.5s ease-in-out;
//     .sticky {
//         position: fixed;
//         top: 500;
//         width: 100%;
//         transition: all 0.5s ease;
//         animation: smoothScroll 1s forwards;
//     }

//     @keyframes smoothScroll {
//         0% {
//             transform: translateY(-142px);
//         }

//         100% {
//             transform: translateY(0px);
//         }
//     }
// }
    .nav-wrapper {
        background-color: #fff !important;
    }
    .sticky {
        position: fixed;
        left: 0;
        width: 100%;
        transition: all 0.5s ease;
        animation: smoothScroll 1s forwards;
        background-color: #fff !important;
        z-index: 100;
        // width: 100vw !important;
    }

    @keyframes smoothScroll {
        0% {
            transform: translateY(-142px);
        }

        100% {
            transform: translateY(0px);
        }
    }

    .mobile-nav {
        position: fixed;
        z-index: 200;
        background-color: #fff !important;
        top: 0px;
        right: 0px;
        height: 100vh;
        width: 245px;
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
        transform: translateX(300px);
        // transition: all 1s ease-out;
    }
    .mobile-nav-close {
        background-color: #fff;
        color: #443C36;
        outline: #fff;
        border: 4px #fff;
        margin-top: 4px;
        &:hover {
            background-color: #fff;
            color: #443C36;
        }
    }

    .mobile-nav-active {
        animation: mobileNavActive 1s forwards;
    }
    .mobile-nav-nonactive {
        animation: mobileNavNonactive 1s forwards;
    }

    @keyframes mobileNavActive {
        0% {
            transform: translateX(300px);
        }

        100% {
            transform: translateX(0px);
        }
    }

    @keyframes mobileNavNonactive {
        0% {
            transform: translateX(0px);
        }

        100% {
            transform: translateX(300px);
        }
    }

    .activeBrand {
        // display: none;
        border-bottom: 2px solid #dba919;
    }
    .fj-navbar-item {
        border-bottom: 2px solid #fff;
        &.activeRoute {
                border-bottom: 2px solid #dba919;
            }
    }

